--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="isLoginPage; else mainLayout">
+<ng-container *ngIf="isLoginPage||isLicensePage; else mainLayout">
   <div class="flex">
     <div class="flex-1 h-screen pt-0 pb-0 pr-3 transition-all duration-300 ease-in-out">
       <router-outlet></router-outlet>
@@ -9,11 +9,11 @@
 <ng-template #mainLayout>
   <div class="flex bg-gray-50">
 
-    <app-sidebar *ngIf="!isLoginPage" (collapseChange)="isCollapsed = $event"></app-sidebar>
+    <app-sidebar *ngIf="!isLoginPage||!isLicensePage" (collapseChange)="isCollapsed = $event"></app-sidebar>
     <div class="flex-1 h-screen pt-[85px] pb-2 pr-3 transition-all duration-300 ease-in-out" [ngClass]="{
     'pl-0': isCollapsed, 
-    'pl-28': !isLoginPage && !isCollapsed, 
-    'pl-72': !isLoginPage && !isCollapsed && screenIsLarge 
+    'pl-28': !isLoginPage||!isLicensePage && !isCollapsed, 
+    'pl-72': !isLoginPage||!isLicensePage && !isCollapsed && screenIsLarge 
   }">
       <!-- <div class="text-pretty font-semibold text-gray-600">
         <div *ngIf="breadcrumbs.length > 0" class="breadcrumbs">
