--- a/src/app/WatchWare/Auth/login/login.component.html
+++ b/src/app/WatchWare/Auth/login/login.component.html
@@ -10,7 +10,7 @@
     <div class="fixed top-0 right-0 px-6 py-4 text-primary font-bold text-2xl ">
         <button type="button" (click)="onLicense()"
             class="flex items-start hover:cursor-pointer border rounded  hover:bg-primary hover:text-accent transition-colors duration-150">
-            <i class="fa fa-key px-4 py-1"></i><span class="text-base py-1 pr-4 font-semibold">License</span>
+            <i class="fa fa-key px-4 py-1"></i><span class="text-base py-1 pr-4 font-semibold">Register</span>
         </button>
     </div>
 
