--- a/src/app/WatchWare/Auth/profile/profile.component.html
+++ b/src/app/WatchWare/Auth/profile/profile.component.html
@@ -1,1 +1,148 @@
-<p>profile works!</p>
+<div class="">
+    <h2 class="text-2xl font-normal text-gray-500">Account Settings</h2>
+</div>
+<div class="my-5  flex justify-start space-x-4 border rounded-lg shadow-md p-4 bg-white">
+
+    <div class="w-full">
+        <div class="flex justify-between items-center">
+            <div>
+                <h2 class="font-normal text-black">Email address</h2>
+                <h2 class="text-sm text-gray-600 mt-1">The email address associated with your account.</h2>
+            </div>
+
+
+            <div class="flex items-center space-x-10">
+                <div class="text-right">
+                    <h2 class="font-normal text-black">{{user.Email}}</h2>
+                    <div *ngIf="user.IsEmailVerified">
+
+                        <h2 class="text-sm mt-1 text-green-600">Verified</h2>
+                    </div>
+                    <div *ngIf="!user.IsEmailVerified">
+
+                        <h2 class="text-sm mt-1 text-red-600">Unverified</h2>
+                    </div>
+                </div>
+
+
+                <button
+                    class="border-gray-300 border rounded-3xl text-sm px-4 py-2 text-gray-600 hover:bg-accent hover:text-primary hover:border-accent transition-colors">
+                    Edit
+                    <i class="fa fa-pencil text-sm pl-1"></i>
+                </button>
+            </div>
+        </div>
+        <hr class="my-4" />
+        <div class="flex justify-between items-center">
+            <div>
+                <h2 class="font-normal text-black">Phone number</h2>
+                <h2 class="text-sm text-gray-600 mt-1">The phone number associated with your account.</h2>
+            </div>
+
+
+            <div class="flex items-center space-x-10">
+                <div class="text-right">
+                    <h2 class="font-normal text-black">{{user.PhoneNumber}}</h2>
+                    <div *ngIf="user.IsPhoneVerified">
+
+                        <h2 class="text-sm mt-1 text-green-600">Verified</h2>
+                    </div>
+                    <div *ngIf="!user.IsPhoneVerified">
+
+                        <h2 class="text-sm mt-1 text-red-600">Unverified</h2>
+                    </div>
+                </div>
+
+
+                <button
+                    class="border-gray-300 border rounded-3xl text-sm px-4 py-2 text-gray-600 hover:bg-accent hover:text-primary hover:border-accent transition-colors">
+                    Edit
+                    <i class="fa fa-pencil text-sm pl-1"></i>
+                </button>
+            </div>
+        </div>
+        <hr class="my-4" />
+        <div class="flex justify-between items-center">
+            <div>
+
+                <h2 class="font-normal text-black">Password</h2>
+                <h2 class="text-sm  mt-1 text-gray-600">Set a unique password to protect your account.</h2>
+            </div>
+            <div class="text-right">
+                <button (click)="showChangePassword=!showChangePassword"
+                    class="border-gray-300 border rounded-3xl px-4 py-2 text-sm  text-gray-600 hover:bg-accent hover:text-primary hover:border-accent transition-colors">
+                    Change Password
+                </button>
+
+            </div>
+        </div>
+        <hr class="my-4" />
+        <div class="flex justify-between items-center">
+            <div>
+
+                <h2 class="font-normal text-black">Delete Account</h2>
+                <h2 class="text-sm text-gray-600">This will delete your account. Your account will be
+                    permanently deleted from this device.</h2>
+            </div>
+            <div class="text-right">
+                <button
+                    class=" border-red-300 border rounded-3xl px-4 py-2 text-sm  text-red-600 hover:bg-red-600 hover:text-primary hover:border-red-600 transition-colors ">
+                    Delete
+                </button>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<p-dialog header="Change password" [modal]="true" [(visible)]="showChangePassword" [style]="{ width: '50rem' }">
+    <form [formGroup]="changePasswordForm">
+        <div class="space-y-6">
+
+
+
+
+
+            <div>
+                <label for="newPassword" class="block text-gray-700 font-medium">New Password</label>
+                <input id="newPassword" type="password" formControlName="newPassword" placeholder="Enter new password"
+                    class="mt-2 p-2 border border-gray-300 rounded-lg w-full" required />
+                <small
+                    *ngIf="changePasswordForm.get('newPassword')?.invalid && changePasswordForm.get('newPassword')?.touched"
+                    class="text-red-500 text-base">
+                    <small *ngIf="changePasswordForm.get('newPassword')?.hasError('required')">Password is
+                        required.</small>
+                    <small *ngIf="changePasswordForm.get('newPassword')?.hasError('minlength')">Password must be at
+                        least 6 characters long.</small>
+                </small>
+            </div>
+
+
+            <div>
+                <label for="confirmPassword" class="block text-gray-700 font-medium">Confirm New Password</label>
+                <input id="confirmPassword" type="password" formControlName="confirmPassword"
+                    placeholder="Confirm new password" class="mt-2 p-2 border border-gray-300 rounded-lg w-full"
+                    required />
+                <small
+                    *ngIf="changePasswordForm.get('confirmPassword')?.invalid && changePasswordForm.get('confirmPassword')?.touched"
+                    class="text-red-500 text-base">
+                    <small *ngIf="changePasswordForm.get('confirmPassword')?.hasError('required')">Confirm password is
+                        required.</small>
+                    <small *ngIf="changePasswordForm.get('confirmPassword')?.hasError('mismatch')">Passwords must
+                        match.</small>
+                </small>
+            </div>
+
+
+            <div class="flex justify-end space-x-4">
+                <button type="button"
+                    class="px-6 py-2 bg-gray-300 text-gray-700 rounded-lg hover:bg-gray-400 transition-colors"
+                    (click)="showChangePassword = false">Cancel</button>
+                <button type="submit"
+                    class="px-6 py-2 bg-accent text-white rounded-lg hover:bg-secondary hover:cursor-pointer transition-colors"
+                    [disabled]="changePasswordForm.invalid">Save</button>
+            </div>
+
+        </div>
+    </form>
+</p-dialog>
