--- a/src/app/WatchWare/Reports/selection/selection.component.html
+++ b/src/app/WatchWare/Reports/selection/selection.component.html
@@ -1,5 +1,7 @@
 <!-- Select Parameters Button -->
-
+<div class="">
+    <h2 class="text-2xl font-normal text-gray-500">Reports</h2>
+</div>
 <div class="my-5  flex justify-start space-x-4 border rounded-lg shadow-md p-4 bg-white">
 
     <form [formGroup]="reportFilterForm" (ngSubmit)="onFetch()" class="flex space-x-4 items-end">
