--- a/src/app/WatchWare/UsersManagement/add-user/add-user.component.html
+++ b/src/app/WatchWare/UsersManagement/add-user/add-user.component.html
@@ -37,12 +37,21 @@
                     <!-- Password -->
                     <div>
                         <label for="password" class="font-medium block text-gray-700">Password</label>
-                        <input id="password" type="password" autocomplete="new-password" formControlName="Password"
+                        <input id="password" [type]="showPassword ? 'text' : 'password'" autocomplete="new-password"
+                            formControlName="Password"
                             class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500"
                             required>
+                        <div class="flex justify-between mt-2">
+                            <button type="button" (click)="togglePassword()">
+                                <i *ngIf="!showPassword" class="fa fa-lock text-gray-600"></i>
+                                <i *ngIf="showPassword" class="fa fa-unlock text-gray-600"></i>
+                                <span class="pl-2 text-gray-600 text-sm">Show password</span>
+                            </button>
+                        </div>
                         <small *ngIf="userForm.get('Password')?.invalid && userForm.get('Password')?.touched"
                             class="text-red-500 text-sm">Password is required</small>
                     </div>
+
 
                     <!-- Phone Number -->
                     <div>
