--- a/src/app/Navigation/sidebar/sidebar.component.html
+++ b/src/app/Navigation/sidebar/sidebar.component.html
@@ -81,10 +81,10 @@
 
 
     <!-- Toggle Button -->
-    <!-- <button (click)="toggleSidebar()"
-        class="p-2 m-2 bg-accent text-white rounded-md focus:outline-none flex items-center justify-center">
+    <button (click)="toggleSidebar()"
+        class="p-2 mb-0 m-2 bg-accent text-white rounded-md focus:outline-none flex items-center justify-center">
         <i class="fas fa-bars text-lg"></i>
-    </button> -->
+    </button>
 
     <!-- Menu List -->
 
