--- a/src/app/WatchWare/DashBoard/overview-graph/overview-graph.component.html
+++ b/src/app/WatchWare/DashBoard/overview-graph/overview-graph.component.html
@@ -16,7 +16,7 @@
 </div>
 
 
-<div *ngIf="!Loading && !DataExists" class="text-center text-gray-500 p-4">
+<div *ngIf="!Loading && !DataExists" class="text-center bg-gray-200 rounded-lg text-gray-500 p-4">
     No overview currently available.
 </div>
 
