--- a/src/app/WatchWare/UsersManagement/add-user/add-user.component.html
+++ b/src/app/WatchWare/UsersManagement/add-user/add-user.component.html
@@ -56,7 +56,7 @@
                     <!-- Phone Number -->
                     <div>
                         <label for="phoneNumber" class="font-medium block text-gray-700">Phone Number</label>
-                        <input id="phoneNumber" type="text" autocomplete="new-password" formControlName="PhoneNumber"
+                        <input id="phoneNumber" type="number" autocomplete="new-password" formControlName="PhoneNumber"
                             class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500"
                             required>
                         <small *ngIf="userForm.get('PhoneNumber')?.invalid && userForm.get('PhoneNumber')?.touched"
