--- a/src/app/WatchWare/Auth/login/login.component.html
+++ b/src/app/WatchWare/Auth/login/login.component.html
@@ -45,7 +45,7 @@
                     <i *ngIf="!hide" class="fa fa-unlock text-gray-600"></i>
                     <span class="pl-2 text-gray-600 text-sm">Show password</span>
                 </button>
-                <a class="text-blue-500 hover:underline hover:cursor-pointer text-sm">Forgot password?</a>
+                <!-- <a class="text-blue-500 hover:underline hover:cursor-pointer text-sm">Forgot password?</a> -->
             </div>
 
 
