added windrose chart generation to report

--- a/src/app/WatchWare/Reports/Result/windrose/windrose.component.html
+++ b/src/app/WatchWare/Reports/Result/windrose/windrose.component.html
@@ -1,1 +1,33 @@
-<p>windrose works!</p>
+<div>
+    <!-- Header with Export Buttons -->
+    <div *ngIf="data && data.length > 0" class="flex items-center justify-between mb-6">
+        <div class="flex justify-start">
+            <span class="font-semibold text-lg">Windrose</span>
+            <span class="text-gray-600 text-lg mx-6">Average : {{getAggregationTypeName(aggregationType)}}</span>
+        </div>
+        <div class="flex gap-3">
+            <!-- <button (click)="onExport()"
+                class="bg-accent text-white px-4 py-2 rounded-lg flex items-center gap-2 hover:opacity-60 transition">
+                <i class="fa fa-file-image"></i> Jpeg
+            </button> -->
+        </div>
+    </div>
+
+    <!-- Chart Container -->
+    <!-- Chart Container -->
+    <div class="overflow-x-auto">
+        <div class="w-full border border-gray-300 rounded-lg shadow-md p-4 bg-white">
+            <div class="relative w-full h-96">
+                <plotly-plot [data]="plotData" [layout]="layout"
+                    [style]="{ width: '100%', height: '100%' }"></plotly-plot>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<!-- No Data Message -->
+<div *ngIf="!data || data.length === 0"
+    class="flex justify-center items-center h-64 bg-gray-100 text-gray-500 rounded-lg">
+    <p>No data for the selected time.</p>
+</div>
