--- a/src/app/WatchWare/System/display-board/display-board.component.html
+++ b/src/app/WatchWare/System/display-board/display-board.component.html
@@ -31,8 +31,9 @@
                 <label for="fileType" class="block text-gray-700 text-sm">File Type</label>
                 <select id="fileType" formControlName="FileType" class="border-gray-400 mt-1 p-2 border rounded w-full">
                     <option value="" disabled selected>Choose File type</option>
-                    <option value="txt">Txt</option>
+                    <option value="txt">Text</option>
                     <option value="csv">Csv</option>
+                    <option value="xlsx">Excel</option>
                 </select>
                 <small *ngIf="displayForm.get('FileType')?.invalid && displayForm.get('FileType')?.touched"
                     class="text-red-500 text-sm">File Type is required.</small>
@@ -47,10 +48,7 @@
                     <span *ngIf="!Loading"></span>
                     <span>Create Template</span>
                 </button>
-                <button type="button" [disabled]="displayForm.invalid" (click)="onPreview()"
-                    class="mt-1 px-4 py-2 bg-accent text-white rounded-md hover:bg-secondary transition disabled:bg-gray-500 disabled:cursor-not-allowed">
-                    <span>Preview</span>
-                </button>
+
             </div>
 
         </div>
@@ -154,9 +152,21 @@
             <div class="mt-6 px-4">
                 <small *ngIf="displayForm.get('Template')?.invalid && displayForm.get('Template')?.touched"
                     class="text-red-500 text-sm">Template is required.</small>
-                <textarea id="fileTemplate" formControlName="Template"
+                <!-- <textarea id="fileTemplate" formControlName="Template"
                     class="border-gray-400 w-full mt-1 p-2 border rounded h-96 focus:outline-none whitespace-pre-wrap"
-                    placeholder="Enter your template here..."></textarea>
+                    placeholder="Enter your template here..."></textarea> -->
+                <div *ngIf="displayForm.get('FileType')?.value === 'xlsx'; else showTextarea">
+                    <label class="block text-sm font-medium text-gray-700 mb-1">Choose the Excel template file</label>
+                    <input type="file" accept=".xlsx" (change)="onExcelFileSelected($event)"
+                        class="border-gray-400 w-full mt-1 p-2 border rounded focus:outline-none" />
+                </div>
+
+                <!-- Fallback textarea for other types -->
+                <ng-template #showTextarea>
+                    <textarea id="fileTemplate" formControlName="Template"
+                        class="border-gray-400 w-full mt-1 p-2 border rounded h-96 focus:outline-none whitespace-pre-wrap"
+                        placeholder="Enter your template here..."></textarea>
+                </ng-template>
 
             </div>
         </div>
