added support to json and excel along with interval fetch for livefeed

--- a/src/app/WatchWare/System/display-board/display-board.component.html
+++ b/src/app/WatchWare/System/display-board/display-board.component.html
@@ -34,6 +34,7 @@
                     <option value="txt">Text</option>
                     <option value="csv">Csv</option>
                     <option value="xlsx">Excel</option>
+                    <option value="json">Json</option>
                 </select>
                 <small *ngIf="displayForm.get('FileType')?.invalid && displayForm.get('FileType')?.touched"
                     class="text-red-500 text-sm">File Type is required.</small>
