--- a/src/app/WatchWare/DashBoard/live-feed/live-feed.component.html
+++ b/src/app/WatchWare/DashBoard/live-feed/live-feed.component.html
@@ -1,5 +1,7 @@
-<div class="">
+<div class="flex justify-between items-center">
     <h2 class="text-3xl font-normal text-gray-500">Dashboard</h2>
+    <button (click)="onRefresh()" class="px-4 py-1  bg-accent text-white  flex justify-center items-center gap-2
+    rounded-md hover:bg-secondary transition duration-300"><i class="fa-solid fa-rotate-right"></i>Refresh</button>
 </div>
 <div *ngIf="stations.length > 0; else noStations">
     <div *ngFor="let station of stations" class="my-5 border rounded-lg shadow-md p-4 bg-white">
