--- a/src/app/WatchWare/System/Notification/channel-statuses/statuses.component.html
+++ b/src/app/WatchWare/System/Notification/channel-statuses/statuses.component.html
@@ -1,5 +1,5 @@
 <div class="">
-    <h2 class="text-2xl font-normal text-gray-500">Notifications</h2>
+    <h2 class="text-2xl font-normal text-gray-500">Notifications - Channels Status</h2>
 </div>
 <div class="my-5 border rounded-lg shadow-md p-4 bg-white">
     <p-table #dt [value]="Channels" dataKey="Id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]" [loading]="Loading"
@@ -7,11 +7,11 @@
         [tableStyle]="{ 'min-width': '1000px' }">
         <ng-template #caption>
             <div class="flex">
-                <button type="text"
+                <!-- <button type="text"
                     class=" px-4 bg-accent border border-accent text-primary rounded-md hover:bg-accent hover:text-primary transition">
                     Subscription Status
-                </button>
-                <p-iconfield iconPosition="left" class="ml-auto">
+                </button> -->
+                <p-iconfield iconPosition="left" class="mr-auto">
                     <p-inputicon>
                         <i class="fa fa-search"></i>
                     </p-inputicon>
